Impoved design of index, made it even more responsive. Fixed footer overflow. Cooked database.

--- a/static/css/gameoffline.css
+++ b/static/css/gameoffline.css
@@ -12,7 +12,7 @@ body, html {
 .game_board{
   flex: 1;
   overflow-y: auto;
-  padding-bottom: 10%; /* Altezza del footer */
+  padding-bottom: 15%; /* Altezza del footer */
 }
 
 .game-controller{
