--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,7 +20,7 @@ li {
 .rightpane{
     flex: 45%; /* Set flex basis to 45% */
     margin-right: 10%; /* Set left and right margins */
-    background-color: #4d4d4d;
+
     display: flex;
 }
 
@@ -28,15 +28,90 @@ li {
 
 .right-container{
   width: 100%; /* Make the container span the full width of the rightpane */
-  height: 80%; /* Make the container span the full height of the rightpane */
-  margin-top: 5%;
-  margin-left: 5%;
-  margin-right: 5%;
+  margin: 5%;
 
   display: grid;
-  grid-template-rows: 40% 20% 15% 10% 15%;
+  grid-template-rows: 40% 15% 17.5% 10% 17.5%;
   
-  background-color: lightblue;
+}
+
+.right-toppane{
+  display: flex;
+  justify-content: center; /* Centra orizzontalmente il contenuto */
+  align-items: center; /* Centra verticalmente il contenuto */
+
+  -moz-border-radius: 15px; 
+  -webkit-border-radius: 15px; 
+  border-radius: 20px;
+
+  border: 1px solid;
+}
+
+#motto{
+  text-align: center;
+}
+
+.right-middlepane{
+  display: flex;
+  justify-content: center; /* Centra orizzontalmente il contenuto */
+  align-items: center; /* Centra verticalmente il contenuto */
+
+  -moz-border-radius: 15px; 
+  -webkit-border-radius: 15px; 
+  border-radius: 20px;
+
+}
+
+.right-bottompane{
+  display: flex;
+  justify-content: center; /* Centra orizzontalmente il contenuto */
+  align-items: center; /* Centra verticalmente il contenuto */
+
+  -moz-border-radius: 15px; 
+  -webkit-border-radius: 15px; 
+  border-radius: 20px;
+  
+}
+
+.play_button{
+  --c:  #229091; /* the color*/
+  width: 100%;
+  height: 100%;
+
+  -moz-border-radius: 15px; 
+  -webkit-border-radius: 15px; 
+  border-radius: 20px;
+  
+  box-shadow: 0 0 0 .1em inset var(--c); 
+  --_g: linear-gradient(var(--c) 0 0) no-repeat;
+  background: 
+    var(--_g) calc(var(--_p,0%) - 100%) 0%,
+    var(--_g) calc(200% - var(--_p,0%)) 0%,
+    var(--_g) calc(var(--_p,0%) - 100%) 100%,
+    var(--_g) calc(200% - var(--_p,0%)) 100%;
+  background-size: 50.5% calc(var(--_p,0%)/2 + .5%);
+  outline-offset: .1em;
+  transition: background-size .4s, background-position 0s .4s;
+}
+
+.play_button:hover {
+  --_p: 100%;
+  transition: background-position .4s, background-size 0s;
+}
+
+.play_button:active {
+  box-shadow: 0 0 9e9q inset #0009; 
+  background-color: var(--c);
+  color: #fff;
+}
+
+.link_play{
+  width: 100%;
+  height: 100%;
+}
+
+#online_button{
+  --c:  #ADADAD; 
 }
 
 /* Left side game board example */
@@ -110,6 +185,7 @@ li {
 @media (max-width: 1080px) {
     .container-fluid {
       flex-direction: column-reverse; /* Switch to horizontal direction for smaller screens */
+      height: 100%; /* Make container span full page height */
     }
     .rightpane {
         flex: 50%; /* Set flex basis to 35% */
