--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
-    background-color: #363636;
+    background-color: #31363F;
     background-repeat: no-repeat;
     background-position: center bottom;
     background-size: cover;
@@ -30,7 +30,7 @@ body {
 
 .footer{
     background:#363636; /* Sets the background color of the footer */
-    padding:30px 0px; /* Sets the padding of the footer */
+   
     font-family: 'Play', sans-serif; /* Sets the font family of the footer */
     text-align:center; /* Aligns the content of the footer to the center */ 
 }
@@ -90,15 +90,16 @@ body {
     box-shadow: 0 0 35px 0 rgba(18, 20, 24, 0.5);
     display: flex;
     flex-direction: column;
+    background-color: 222831;
 }
 
-.h-90{
-    min-height: 85%;
+.h-80{
+    min-height: 80%;
     
 }
 
-.h-10{
-    min-height: 15%;
+.h-20{
+    min-height: 20%;
 }
 
 
@@ -206,5 +207,16 @@ a.sidebar-link {
     }
     .main {
         z-index: 0;
+    }
+}
+
+@media (max-width:720px) {
+    .h-80{
+        min-height: 72%;
+        
+    }
+    
+    .h-20{
+        min-height: 28%;
     }
 }
